# src/TearLogic.Clients/kiota/Models/V2ChatCbi/ChatCbiRequest.cs
@@ -5,63 +5,47 @@ using Microsoft.Kiota.Abstractions.Serialization;
 using System.Collections.Generic;
 using System.IO;
 using System;
-namespace TearLogic.Clients.Models.V2ChatCBI
+namespace TearLogic.Clients.Models.V2ChatCbi
 {
     [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
     #pragma warning disable CS1591
-    public partial class Result : IAdditionalDataHolder, IParsable
+    public partial class ChatCbiRequest : IAdditionalDataHolder, IParsable
     #pragma warning restore CS1591
     {
         /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
         public IDictionary<string, object> AdditionalData { get; set; }
-        /// <summary>The date property</summary>
+        /// <summary>A unique id for the conversation, for use with multi-turn conversations. A chatID is returned in the initial response.</summary>
 #if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
 #nullable enable
-        public string? Date { get; set; }
+        public string? ChatID { get; set; }
 #nullable restore
 #else
-        public string Date { get; set; }
+        public string ChatID { get; set; }
 #endif
-        /// <summary>The thumbnailUrl property</summary>
+        /// <summary>The message to send.</summary>
 #if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
 #nullable enable
-        public string? ThumbnailUrl { get; set; }
+        public string? Message { get; set; }
 #nullable restore
 #else
-        public string ThumbnailUrl { get; set; }
-#endif
-        /// <summary>The title property</summary>
-#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
-#nullable enable
-        public string? Title { get; set; }
-#nullable restore
-#else
-        public string Title { get; set; }
-#endif
-        /// <summary>The url property</summary>
-#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
-#nullable enable
-        public string? Url { get; set; }
-#nullable restore
-#else
-        public string Url { get; set; }
+        public string Message { get; set; }
 #endif
         /// <summary>
-        /// Instantiates a new <see cref="global::TearLogic.Clients.Models.V2ChatCBI.Result"/> and sets the default values.
+        /// Instantiates a new <see cref="global::TearLogic.Clients.Models.V2ChatCbi.ChatCbiRequest"/> and sets the default values.
         /// </summary>
-        public Result()
+        public ChatCbiRequest()
         {
             AdditionalData = new Dictionary<string, object>();
         }
         /// <summary>
         /// Creates a new instance of the appropriate class based on discriminator value
         /// </summary>
-        /// <returns>A <see cref="global::TearLogic.Clients.Models.V2ChatCBI.Result"/></returns>
+        /// <returns>A <see cref="global::TearLogic.Clients.Models.V2ChatCbi.ChatCbiRequest"/></returns>
         /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
-        public static global::TearLogic.Clients.Models.V2ChatCBI.Result CreateFromDiscriminatorValue(IParseNode parseNode)
+        public static global::TearLogic.Clients.Models.V2ChatCbi.ChatCbiRequest CreateFromDiscriminatorValue(IParseNode parseNode)
         {
             if(ReferenceEquals(parseNode, null)) throw new ArgumentNullException(nameof(parseNode));
-            return new global::TearLogic.Clients.Models.V2ChatCBI.Result();
+            return new global::TearLogic.Clients.Models.V2ChatCbi.ChatCbiRequest();
         }
         /// <summary>
         /// The deserialization information for the current model
@@ -71,10 +55,8 @@ namespace TearLogic.Clients.Models.V2ChatCBI
         {
             return new Dictionary<string, Action<IParseNode>>
             {
-                { "date", n => { Date = n.GetStringValue(); } },
-                { "thumbnailUrl", n => { ThumbnailUrl = n.GetStringValue(); } },
-                { "title", n => { Title = n.GetStringValue(); } },
-                { "url", n => { Url = n.GetStringValue(); } },
+                { "chatID", n => { ChatID = n.GetStringValue(); } },
+                { "message", n => { Message = n.GetStringValue(); } },
             };
         }
         /// <summary>
@@ -84,10 +66,8 @@ namespace TearLogic.Clients.Models.V2ChatCBI
         public virtual void Serialize(ISerializationWriter writer)
         {
             if(ReferenceEquals(writer, null)) throw new ArgumentNullException(nameof(writer));
-            writer.WriteStringValue("date", Date);
-            writer.WriteStringValue("thumbnailUrl", ThumbnailUrl);
-            writer.WriteStringValue("title", Title);
-            writer.WriteStringValue("url", Url);
+            writer.WriteStringValue("chatID", ChatID);
+            writer.WriteStringValue("message", Message);
             writer.WriteAdditionalData(AdditionalData);
         }
     }
